fix: Resolve Gradle 9 compatibility
removed shadowJar plugin